hugr-core/tests/snapshots/model__roundtrip_add.snap
---
source: hugr-core/tests/model.rs
expression: ast
---
(hugr 0)

(mod)

(import core.fn)

(import core.meta.description)

(import core.nat)

(import arithmetic.int.types.int@0.1.0)

(declare-operation
  arithmetic.int.iadd@0.1.1
  (param ?_0 core.nat)
  (core.fn
    [(arithmetic.int.types.int ?_0) (arithmetic.int.types.int ?_0)]
    [(arithmetic.int.types.int ?_0)])
  (meta
    (core.meta.description
      "addition modulo 2^N (signed and unsigned versions are the same op)")))

(define-func
  public
  example.add
  (core.fn
    [(arithmetic.int.types.int 6) (arithmetic.int.types.int 6)]
    [(arithmetic.int.types.int 6)])
  (dfg [%0 %1] [%2]
    (signature
      (core.fn
        [(arithmetic.int.types.int 6) (arithmetic.int.types.int 6)]
        [(arithmetic.int.types.int 6)]))
    ((arithmetic.int.iadd 6) [%0 %1] [%2]
      (signature
        (core.fn
          [(arithmetic.int.types.int 6) (arithmetic.int.types.int 6)]
          [(arithmetic.int.types.int 6)])))))
