hugr-core/tests/snapshots/model__roundtrip_alias.snap
---
source: hugr-core/tests/model.rs
expression: ast
---
(hugr 0)

(mod)

(import core.fn)

(import core.type)

(import arithmetic.int.types.int@0.1.0)

(declare-alias local.float core.type)

(define-alias local.int core.type arithmetic.int.types.int)

(define-alias local.endo core.type (core.fn [] []))
