hugr-core/tests/snapshots/model__roundtrip_cfg.snap
---
source: hugr-core/tests/model.rs
expression: ast
---
(hugr 0)

(mod)

(import core.adt)

(import core.ctrl)

(import core.fn)

(import core.make_adt)

(import core.type)

(define-func public example.cfg_loop (param ?_0 core.type) (core.fn [?_0] [?_0])
  (dfg [%0] [%1]
    (signature (core.fn [?_0] [?_0]))
    (cfg [%0] [%1]
      (signature (core.fn [?_0] [?_0]))
      (cfg [%2] [%3]
        (signature (core.ctrl [[?_0]] [[?_0]]))
        (block [%2] [%3 %2]
          (signature (core.ctrl [[?_0]] [[?_0] [?_0]]))
          (dfg [%4] [%5]
            (signature (core.fn [?_0] [(core.adt [[?_0] [?_0]])]))
            ((core.make_adt 0) [%4] [%5]
              (signature (core.fn [?_0] [(core.adt [[?_0] [?_0]])])))))))))

(define-func
  public example.cfg_order (param ?_0 core.type) (core.fn [?_0] [?_0])
  (dfg [%0] [%1]
    (signature (core.fn [?_0] [?_0]))
    (cfg [%0] [%1]
      (signature (core.fn [?_0] [?_0]))
      (cfg [%2] [%3]
        (signature (core.ctrl [[?_0]] [[?_0]]))
        (block [%2] [%6]
          (signature (core.ctrl [[?_0]] [[?_0]]))
          (dfg [%4] [%5]
            (signature (core.fn [?_0] [(core.adt [[?_0]])]))
            ((core.make_adt 0) [%4] [%5]
              (signature (core.fn [?_0] [(core.adt [[?_0]])])))))
        (block [%6] [%3]
          (signature (core.ctrl [[?_0]] [[?_0]]))
          (dfg [%7] [%8]
            (signature (core.fn [?_0] [(core.adt [[?_0]])]))
            ((core.make_adt 0) [%7] [%8]
              (signature (core.fn [?_0] [(core.adt [[?_0]])])))))))))
