hugr-core/tests/snapshots/model__roundtrip_constraints.snap
---
source: hugr-core/tests/model.rs
expression: ast
---
(hugr 0)

(mod)

(import core.fn)

(import core.nat)

(import core.nonlinear)

(import core.title)

(import core.type)

(import collections.array.array@0.1.2)

(declare-func
  private
  _1
  (param ?_0 core.nat)
  (param ?_1 core.type)
  (where (core.nonlinear ?_1))
  (core.fn [?_1] [(collections.array.array ?_0 ?_1)])
  (meta (core.title "array.replicate")))

(declare-func
  public
  array.copy
  (param ?_0 core.nat)
  (param ?_1 core.type)
  (where (core.nonlinear ?_1))
  (core.fn
    [(collections.array.array ?_0 ?_1)]
    [(collections.array.array ?_0 ?_1) (collections.array.array ?_0 ?_1)]))

(define-func
  public
  util.copy
  (param ?_0 core.type)
  (where (core.nonlinear ?_0))
  (core.fn [?_0] [?_0 ?_0])
  (dfg [%0] [%0 %0] (signature (core.fn [?_0] [?_0 ?_0]))))
