hugr-core/tests/snapshots/model__roundtrip_entrypoint.snap
---
source: hugr-core/tests/model.rs
expression: ast
---
(hugr 0)

(mod)

(import core.entrypoint)

(import core.fn)

(define-func public main (core.fn [] [])
  (meta core.entrypoint)
  (dfg (signature (core.fn [] []))))

(mod)

(import core.entrypoint)

(import core.fn)

(define-func public wrapper_dfg (core.fn [] [])
  (meta core.entrypoint)
  (dfg (signature (core.fn [] []))))

(mod)

(import core.adt)

(import core.ctrl)

(import core.entrypoint)

(import core.fn)

(import core.make_adt)

(define-func public wrapper_cfg (core.fn [] [])
  (dfg
    (signature (core.fn [] []))
    (cfg
      (signature (core.fn [] []))
      (meta core.entrypoint)
      (cfg [%0] [%1]
        (signature (core.ctrl [[]] [[]]))
        (meta core.entrypoint)
        (block [%0] [%1]
          (signature (core.ctrl [[]] [[]]))
          (dfg [] [%2]
            (signature (core.fn [] [(core.adt [[]])]))
            ((core.make_adt 0) [] [%2]
              (signature (core.fn [] [(core.adt [[]])])))))))))
