hugr-core/tests/snapshots/model__roundtrip_loop.snap
---
source: hugr-core/tests/model.rs
expression: ast
---
(hugr 0)

(mod)

(import core.adt)

(import core.fn)

(import core.make_adt)

(import core.title)

(import core.type)

(define-func private _1 (param ?_0 core.type) (core.fn [?_0] [?_0])
  (meta (core.title "example.loop"))
  (dfg [%0] [%1]
    (signature (core.fn [?_0] [?_0]))
    (tail-loop [%0] [%1]
      (signature (core.fn [?_0] [?_0]))
      (dfg [%2] [%3]
        (signature (core.fn [?_0] [(core.adt [[?_0] [?_0]])]))
        ((core.make_adt 0) [%2] [%3]
          (signature (core.fn [?_0] [(core.adt [[?_0] [?_0]])])))))))
