hugr-core/tests/snapshots/model__roundtrip_params.snap
---
source: hugr-core/tests/model.rs
expression: ast
---
(hugr 0)

(mod)

(import core.bytes)

(import core.call)

(import core.float)

(import core.fn)

(import core.nat)

(import core.str)

(import core.title)

(import core.type)

(define-func
  public
  example.swap
  (param ?_0 core.type)
  (param ?_1 core.type)
  (core.fn [?_0 ?_1] [?_1 ?_0])
  (dfg [%0 %1] [%1 %0] (signature (core.fn [?_0 ?_1] [?_1 ?_0]))))

(declare-func
  public
  example.literals
  (param ?_0 core.str)
  (param ?_1 core.nat)
  (param ?_2 core.bytes)
  (param ?_3 core.float)
  (core.fn [] []))

(define-func private _5 (core.fn [] [])
  (meta (core.title "example.call_literals"))
  (dfg
    (signature (core.fn [] []))
    ((core.call
        []
        []
        (example.literals
          "string"
          42
          (bytes "SGVsbG8gd29ybGQg8J+Yig==")
          6.023e23))
      (signature (core.fn [] [])))))
